# verifopt

./: .gitignore  .gitmodules  BENCHMARKS.md  DYN_TRAIT_OBS.md  MIR_ANALYSIS.md  MIR_CHECKER.md  MIR_DETAILS.md  MIR_PASS.md  NOTES.md  NOVELTY.md  NOVT.md  PANIC.md  PANICS.md  PATTERNS.md  PRELIM_EVAL.md  PRESENT.md  PROFILING.md  PROJECTS.md  README.md  RELWORK.md  REWRITE_ATTEMPTS.md  RUST_BENEFITS.md  TODOS.md  TRAITS_GENERICS_VTABLES.md  UNITING_VTABLES.md  USING_FLUX.md  USING_VERUS.md  VERIFOPT.md  shell.nix
rewrites/: .gitignore  Cargo.toml  plot_visitor0sf_2.gpi  results.md  temp_best_rw.ll  temp_src_rw.ll
rewrites/benches/: bench.rs  criterion.rs
rewrites/src/: .gitignore  DEBUG.md  double_visitor0sf.rs  double_visitor0sf_ref.rs  lib.rs  mir_rw.rs  not_rw.rs  og-log  og0sf.rs  og2sf.rs  og2sf_mir_rw.rs  og5sf.rs  prime2sf.rs  prime3sf.rs  pub_trait.rs  simple.rs  simple_mir_rw.rs  src_rw.rs  struct_fields.rs  vec.rs  vec0sf.rs  vec5sf.rs  vec_simple.rs  visitor.ll  visitor.rs  visitor0sf.mir  visitor0sf.rs  visitor0sf_2.rs  visitor0sf_import.rs  visitor2sf.rs  visitor_simple.rs
simple-interp/: .gitignore  Cargo.toml  README.md  original_norewrite.mod.cgu1.oz.ll  ptr_metadata.unmod.cgu1.oz.ll
simple-interp/examples/: .gitignore  any.rs  gen_rust.rs  generated_safe.rs  generated_unsafe.rs  handwritten.rs  handwritten_safe.rs  handwritten_unsafe.rs  intrinsic.rs  mir_rw.rs  not_rw.rs  original.mir  original.rs  original_norewrite.rs  original_torewrite.mir  original_torewrite.rs  out.rs  ptr_metadata.mir  ptr_metadata.rs  src_rw.rs  src_rw_into_raw.rs  transmute.rs  transmute_cp.rs  type_id.rs  vtable_struct.rs
simple-interp/examples/llvm-ir/: original_norewrite.mod.cgu1.o3.ll  original_norewrite.unmod.cgu1.os.ll  original_norewrite.unmod.cgu1.oz.ll  original_norewrite_UNMODrust.ll  original_torewrite.unmod.cgu1.os.ll  original_torewrite.unmod.cgu1.oz.ll  ptr_metadata.mod.cgu1.oz.ll  ptr_metadata.unmod.cgu1.o3.ll  ptr_metadata_MODrust.ll  ptr_metadata_UNMODrust.ll
simple-interp/examples/mir/: handwritten.og.o3.mir  handwritten_unsafe.og.o0.mir  og.main.3-2-005.ReplaceDynamicDispatch.before.mir  original.og.o3.mir  original_norewrite_MODrust.mir  original_norewrite_UNMODrust.mir  original_torewrite.mir  original_torewrite_UNMODrust.mir  ptr_metadata.main.3-2-005.ReplaceDynamicDispatch.before.mir  ptr_metadata.mir  ptr_metadata_UNMODrust.mir  transmute_cp.main.3-2-005.ReplaceDynamicDispatch.before.mir.rewrite-goal
simple-interp/src/: collect.rs  constraints.rs  display.rs  error.rs  func_collect.rs  func_collector.rs  funcs.rs  interp.rs  interpret.rs  interpreter.rs  lib.rs  rewrite.rs  rewriter.rs  sig_collect.rs  sigs.rs  ssa.rs  statement.rs  traits.rs
simple-interp/src/func_collect/: func_collect_tests.rs
simple-interp/src/interpret/: interpret_tests.rs
simple-interp/src/rewrite/: rewrite_tests.rs
simple-interp/src/sig_collect/: sig_collect_tests.rs
simple-interp/src/ssa/: ssa_tests.rs
simple-interp/tests/: integration.rs
storage-markers-expl/: Cargo.toml  count_markers.sh
storage-markers-expl/benches/: bench_storage_markers.rs
storage-markers-expl/blowup_stack_ex/: stack_usage_visual_massif.txt
storage-markers-expl/blowup_stack_ex/some/: blowup_stack  blowup_stack-9d77c2683a41be35.ll  blowup_stack-9d77c2683a41be35.mir  massif.out.1063431
storage-markers-expl/blowup_stack_ex/with/: blowup_stack_w_markers  (+3 more)
storage-markers-expl/src/: 200_graph.json  blowup_stack.rs  cereal.rs  cereal_200.rs  config.json  four_v_12_k.rs  generate_graph.rs  heap_dep_stack.rs  lib.rs  recurse_large_array.rs  stack_overflow.rs
storage-markers-expl/w_storage_markers_results/: cereal-e65b0401598c32b2.mir  cereal_200-d25c3ad0cdfccb5d.mir  heap_dep_stack-2ae2dc691ec698a9.mir  recurse_large_array-ead0483417663913.mir
storage-markers-expl/wo_storage_markers_results/: cereal-e65b0401598c32b2.mir  cereal_200-d25c3ad0cdfccb5d.mir  heap_dep_stack-2ae2dc691ec698a9.mir  recurse_large_array-ead0483417663913.mir
(+383 files in other folders)
