[package]
name = "rewrites"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
visitor-decl = { path = "../visitor-ex/visitor-decl" }
visitor-use = { path = "../visitor-ex/visitor-use" }

# from https://doc.rust-lang.org/cargo/reference/profiles.html#lto : 
# "No LTO is performed if codegen units is 1 or opt-level is 0."
[profile.release]
opt-level = 3
debug = 1   # or 2
codegen-units = 1
lto = false

[profile.dev]
codegen-units = 1

[dev-dependencies]
criterion = "0.7.0"
visitor-decl = { path = "../visitor-ex/visitor-decl" }
visitor-use = { path = "../visitor-ex/visitor-use" }

[[bench]]
name = "criterion"
harness = false

[[bin]]
name = "visitor0sf"
path = "src/visitor0sf.rs"

[[bin]]
name = "visitor0sf_2"
path = "src/visitor0sf_2.rs"

[[bin]]
name = "visitor2sf"
path = "src/visitor2sf.rs"

[[bin]]
name = "double_visitor0sf"
path = "src/double_visitor0sf.rs"